epsch - fixed flicker on load

--- a/epsch/resources/styles.css
+++ b/epsch/resources/styles.css
@@ -51,6 +51,7 @@ html, body {
     margin: 0px;
     /* padding-bottom: 10px; */
     text-align: center;
+    visibility: hidden;
 }
 
 h2, h3, h4 {
